@@ -90,6 +90,8 @@ Version 1.3.0
        show the dialog. See issue #205 for details. (Stefan)
 - BUG: Blame didn't work correctly if the file didn't 
        exist anymore in HEAD. (Stefan)
+- BUG: A malformed URL could make TortoiseSVN crash, for example
+       httpS://test/test. (Stefan)
 
 Version 1.2.6
 - BUG: The status cache updated sometimes wrong paths or missed
